# active-data-recipes

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  doclint  index.md  mc_root_dirs.txt  pyproject.toml  requirements.readthedocs.txt  setup.py  test.json  tox.ini
_posts/: 2017-11-09-welcome-to-jekyll.markdown
adr/: __init__.py  cli.py  config.yml  configuration.py  context.py  errors.py  formatter.py  gist.py  main.py  query.py  recipe.py  sources.py
adr/export/: gist.py  test.py
adr/queries/: activedata_requests.query  activedata_usage.query  all_push_id.query  backout_ids.query  backout_rate.query  chunk_durations_over_time.yaml  code_coverage.query  code_coverage_by_suite.query  config_durations.query  covered_files.query  fixed_by_commit_jobs.query  intermittent_jobs.query  intermittent_test_rate.query  intermittent_tests.query  meta.query  meta_columns.query  meta_values.query  perf_tp6_compare.query  (+16 more)
adr_web_app/: app.py
app/: app.py
docs/: Student Project 190130.md  conf.py  index.rst  recipes.rst
extra/: completion.bash  gen_recipe_docs.py
queries/: backout_rate.query  code_coverage_by_suite.query  intermittent_test_rate.query  intermittent_tests.query  perf_tp6_compare.query  test_durations.query  tests_config_times.query  total_files.query  total_hours_spent_on_branch.query
recipes/: activedata_usage.py  backout_rate.py  branch_usage.py  code_coverage.py  code_coverage_by_suite.py  config_durations.py  config_intermittents.py  context.yml  files_with_coverage.py  inspect.py  intermittent_test_data.py  intermittent_tests.py  perf_tp6_compare.py  push_failure.py  push_percentage.py  raw_coverage.py  seta_accuracy.py  skipped_tests.py  task_durations.py  test_durations.py  tests_by_suite.py  tests_config_times.py  tests_in_duration.py  try_efficiency.py  try_usage.py  try_users.py  unique_failures.py
test/: config.toml  conftest.py  fixtures.py  test_config.py  test_context.py  test_formatter.py  test_queries.py  test_recipes.py  test_recipes_integration.py  test_web_api.py
(+91 files in other folders)
