[tool.poetry]
name = "active-data-recipes"
version = "0.11.1"
description = "Collection of recipes for finding information in ActiveData"

packages = [
    { include = "adr" },
    { include = "app" },
    { include = "recipes" },
]
include = [
    "adr/util/*",
    "app/*",
    "extra/*",
    "queries/*",
]

license = "MPL-2.0"
authors = [
    "Andrew Halberstadt <ahalberstadt@mozilla.com>",
    "Trang Nguyen <huyentrang1511@gmail.com>",
]

readme = "README.md"
repository = "https://github.com/mozilla/active-data-recipes"
homepage = "https://github.com/mozilla/active-data-recipes"

[tool.poetry.scripts]
adr = "adr.cli:main"
adr-gist = "adr.export.gist:cli"
adr-test = "adr.export.test:cli"
adr-app = "app.app:main"

[tool.poetry.dependencies]
python = "^3.6"

json-e = "^3.0.0"
requests = "^2.21.0"
terminaltables = "^3.1.0"
pyyaml = "^5.1"
beautifulsoup4 = "^4.7.1"
flask = "^1.0.2"
markdown = "^3.0.1"
docutils = "^0.14"
pygments = "^2.3.1"
orderedset = "^2.0.1"
appdirs = "^1.4"
tomlkit = "^0.5.3"
cachy = "^0.2.0"
redis = {version = "^3.2",optional = true}
python3-memcached = {version = "^1.51",optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^3.7.7"
flake8-import-order = "^0.18.1"
pytest = "^3.0.0"
tox = "^3.7.0"
