[tool.poetry]
name = "active-data-recipes"
version = "0.1.0"
description = "A repository of various ActiveData recipes"

packages = [
    { include = "recipes" },
]
include = [
    "extra/*",
    "recipes/queries/*",
]

license = "MPL-2.0"
authors = [
    "Andrew Halberstadt <ahalberstadt@mozilla.com>",
    "Trang Nguyen <huyentrang1511@gmail.com>",
]

readme = "README.md"
repository = "https://github.com/mozilla/active-data-recipes"
homepage = "https://github.com/mozilla/active-data-recipes"

[tool.poetry.dependencies]
python = "^3.6"
adr = "^0.16.2"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.7"
flake8-import-order = "^0.18.1"
pytest = "^3.0.0"
tox = "^3.7.0"
sphinx = "^2.0"
